[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
description = "My Advent of Code 2022 solutions"
license = "MIT"
repository = "git+https://github.com/capJavert/advent-of-code-2022.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = { version = "1.5.4" }
itertools = { version = "0.10.3" }
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
